@@ -1,11 +1,11 @@
 diff -Nru wvstreams-3.70-clean/src/ipstreams/wvaddr.h wvstreams-3.70/src/ipstreams/wvaddr.h
 --- wvstreams-3.70-clean/src/ipstreams/wvaddr.h	Tue Apr  2 20:53:20 2002
 +++ wvstreams-3.70/src/ipstreams/wvaddr.h	Thu Jul  4 02:32:27 2002
-@@ -369,7 +369,7 @@
+@@ -369,7 +369,8 @@
      __u16 port;
      
      WvIPPortAddr();
--    WvIPPortAddr(const unsigned char _ipaddr[4], __u16 _port = 0);
+     WvIPPortAddr(const unsigned char _ipaddr[4], __u16 _port = 0);
 +    WvIPPortAddr(unsigned char _ipaddr[4], __u16 _port = 0);
      WvIPPortAddr(const WvIPAddr &_ipaddr, __u16 _port = 0);
      WvIPPortAddr(const char string[]) : WvIPAddr(string)
