@@ -1,8 +1,14 @@
 # ChangeLog for net-libs/wvstreams
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/wvstreams/ChangeLog,v 1.2 2002/07/04 02:47:58 lostlogic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/wvstreams/ChangeLog,v 1.3 2002/07/05 18:48:50 lostlogic Exp $
 
-*wvstreams-3.70 (03 Jul 2002)
+*wvstreams-3.70-r2 (05 Jul 2002)
+
+  05 Jul 2002; Brandon Low <lostlogic@gentoo.org> wvstreams-3.70-r2.ebuild
+
+  Fix patch to work with 2.95.3 and 3.1, turn off parallel make for now.
+
+*wvstreams-3.70-r2 (03 Jul 2002)
 
   03 Jul 2002; Brandon Low <lostlogic@gentoo.org> wvstreams-3.70-r1.ebuild
 
